Modificar estilos en rama master

--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,10 @@ html {
     font-size: 1em;
     line-height: 1.4;
 }
+p {
+    line-height: 1.5em;
+}
+
 
 /*
  * Remove text-shadow in selection highlight:
